--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,12 +1,13 @@
-testSiteName = https://identity.qa.example.com/playground2/oauth2.jsp?reset=true
-carbonSiteName = https://india.mconnect.wso2telco.com/carbon/admin/login.jsp
+apiManagerSiteName = http://apimanager.demo.wso2telco.com/store/
+publisherSiteName = http://apimanager.demo.wso2telco.com/publisher/site/pages/login.jag
+carbonSiteName = http://apimanager.demo.wso2telco.com/carbon/admin/login.jsp
 testSiteDomain = https://localhost:9444
 testSiteDomainhttp = http://localhost:9764
-browserType = MOZILLA
+browser = FIREFOX
 ScreenshotPath = 
 Enviromnment = prod
-adminUserName =
-adminPassword =
+adminUserName = admin
+adminPassword = admin
 default_implicitWait = 1000
 
 msisdn = 913121224102
