--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -1,7 +1,7 @@
 browser = firefox
 IMPLICIT_WAIT=3000
 apiManagerSiteName = https://apimanager.demo.wso2telco.com/store/
-carbonSiteName = http://apimanager.demo.wso2telco.com/carbon/admin/login.jsp
+carbonSiteName = http://identity.demo.wso2telco.com/carbon/admin/login.jsp
 apiManagerPublisher = https://apimanager.demo.wso2telco.com/publisher/
 
 adminUserName = admin
