login users moved to config

--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -1,10 +1,29 @@
 browser = firefox
 IMPLICIT_WAIT=3000
-apiManagerSiteName = https://apimanager.demo.wso2telco.com/store/
-carbonSiteName = http://identity.demo.wso2telco.com/carbon/admin/login.jsp
-apiManagerPublisher = https://apimanager.demo.wso2telco.com/publisher/
+stagingApiManagerSiteName = http://apimanager.demo.wso2telco.com/store/
+stagingCarbonSiteName = http://identity.demo.wso2telco.com/carbon/admin/login.jsp
+stagingApiManagerPublisher = http://apimanager.demo.wso2telco.com/publisher/
 
-adminUserName = admin
-adminPassword = admin
-operatorUserName = dialogadmin
-operatorPassword = admin
+stagingAdminUserName = admin
+stagingAdminPassword = admin
+stagingOperatorUserName = dialogadmin
+stagingOperatorPassword = admin
+
+#001, 
+stagingSIGNUPuser = AuxTestSignupUser
+stagingSIGNUPpwd = 1qaz2wsx@
+#002, 004
+stagingAGGRIGATORuser = AuxTestUser
+stagingAGGRIGATORpwd = 1qaz2wsx@
+#003
+stagingWITHOUTAGGRIGATORuser = AuxWithoutAggregate
+stagingWITHOUTAGGRIGATORpwd = 1qaz2wsx@
+#005
+stagingLOGOUTuser = AuxLogoutUser
+stagingLOGOUTpwd = 1qaz2wsx@
+#006
+stagingPUBLISHERuser = AutoTest1
+stagingPUBLISHERpwd = 1qaz2wsx@
+#010
+stagingAPPCREATEuser = AuxTestUser002
+stagingAPPCREATEpwd = 1qaz2wsx@
