login user name handled

--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -18,7 +18,7 @@ stagingAGGRIGATORpwd = 1qaz2wsx@
 #003
 stagingWITHOUTAGGRIGATORuser = AuxWithoutAggregate
 stagingWITHOUTAGGRIGATORpwd = 1qaz2wsx@
-#005
+#005, 011
 stagingLOGOUTuser = AuxLogoutUser
 stagingLOGOUTpwd = 1qaz2wsx@
 #006
@@ -27,3 +27,6 @@ stagingPUBLISHERpwd = 1qaz2wsx@
 #010
 stagingAPPCREATEuser = AuxTestUser005
 stagingAPPCREATEpwd = 1qaz2wsx@
+#013, 014, 015
+stagingSUBSCRIBERAPPuser = AuxTestUser002
+stagingSUBSCRIBERAPPpwd = 1qaz2wsx@
