sleep time configured on config file

--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -9,6 +9,8 @@ stagingAdminPassword = admin
 stagingOperatorUserName = dialogadmin
 stagingOperatorPassword = admin
 
+sleepTime = 2000
+
 #001, 
 stagingSIGNUPuser = AuxTestSignupUser
 stagingSIGNUPpwd = 1qaz2wsx@
