--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -1,4 +1,5 @@
-browser = firefox
+browser = INTERNETEXPLORER
+#FIREFOX, CHROME, INTERNETEXPLORER
 IMPLICIT_WAIT=3000
 stagingApiManagerSiteName = http://apimanager.demo.wso2telco.com/store/
 stagingCarbonSiteName = http://identity.demo.wso2telco.com/carbon/admin/login.jsp
@@ -9,7 +10,7 @@ stagingAdminPassword = admin
 stagingOperatorUserName = dialogadmin
 stagingOperatorPassword = admin
 
-sleepTime = 2000
+sleepTime = 4000
 
 #001, 
 stagingSIGNUPuser = AuxTestSignupUser
@@ -32,3 +33,6 @@ stagingAPPCREATEpwd = 1qaz2wsx@
 #013, 014, 015
 stagingSUBSCRIBERAPPuser = AuxTestUser002
 stagingSUBSCRIBERAPPpwd = 1qaz2wsx@
+
+CHROME_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
+IE_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
