--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -1,4 +1,4 @@
-browser = INTERNETEXPLORER
+browser = CHROME
 #FIREFOX, CHROME, INTERNETEXPLORER
 IMPLICIT_WAIT=3000
 stagingApiManagerSiteName = http://apimanager.demo.wso2telco.com/store/
@@ -30,9 +30,12 @@ stagingPUBLISHERpwd = 1qaz2wsx@
 #010
 stagingAPPCREATEuser = AuxTestUser005
 stagingAPPCREATEpwd = 1qaz2wsx@
-#013, 014, 015
+#014, 015
 stagingSUBSCRIBERAPPuser = AuxTestUser002
 stagingSUBSCRIBERAPPpwd = 1qaz2wsx@
+#013 
+stagingSUBSCRIPTIONuser = AuxSubscriptionUser
+stagingSUBSCRIPTIONpwd = 1qaz2wsx@
 
-CHROME_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
-IE_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
+CHROME_DRIVER_PATH = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
+IE_DRIVER_PATH = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
