file download path added

--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -1,4 +1,4 @@
-browser = INTERNETEXPLORER
+browser = FIREFOX
 #FIREFOX, CHROME, INTERNETEXPLORER
 IMPLICIT_WAIT=3000
 stagingApiManagerSiteName = http://apimanager.demo.wso2telco.com/store/
@@ -36,3 +36,4 @@ stagingSUBSCRIBERAPPpwd = 1qaz2wsx@
 
 CHROME_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
 IE_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
+downloadPath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
