--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -25,7 +25,7 @@ stagingWITHOUTAGGRIGATORpwd = 1qaz2wsx@
 stagingLOGOUTuser = AuxLogoutUser
 stagingLOGOUTpwd = 1qaz2wsx@
 #006
-stagingPUBLISHERuser = AutoTest1
+stagingPUBLISHERuser = AuxAPIUser
 stagingPUBLISHERpwd = 1qaz2wsx@
 #010
 stagingAPPCREATEuser = AuxTestUser005
