--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -37,7 +37,7 @@ stagingSUBSCRIBERAPPpwd = 1qaz2wsx@
 stagingSUBSCRIPTIONuser = AuxSubscriptionUser
 stagingSUBSCRIPTIONpwd = 1qaz2wsx@
 
-CHROME_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
-IE_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
-downloadPath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
+CHROME_DRIVER_PATH = C:/WSO2Telco_Automation/api-manager-test/src/test/resources/config/drivers/chromedriver.exe
+IE_DRIVER_PATH = C:/WSO2Telco_Automation/api-manager-test/src/test/resources/config/drivers/IEDriverServer.exe
+downloadPath = C:/WSO2Telco_Automation/api-manager-test/src/test/resources/config/download
 
