--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -10,6 +10,10 @@ stagingAdminPassword = admin
 stagingOperatorUserName = dialogadmin
 stagingOperatorPassword = admin
 
+mySqlUrl = jdbc:mysql://52.5.143.118:3306/qadbApiStats?autoReconnect=true&amp;relaxAutoCommit=true
+dbUsername = ApiStatsUser
+dbPassword = password123
+
 sleepTime = 4000
 
 #001, 
@@ -37,7 +41,6 @@ stagingSUBSCRIBERAPPpwd = 1qaz2wsx@
 stagingSUBSCRIPTIONuser = AuxSubscriptionUser
 stagingSUBSCRIPTIONpwd = 1qaz2wsx@
 
-CHROME_DRIVER_PATH = C:/WSO2Telco_Automation/api-manager-test/src/test/resources/config/drivers/chromedriver.exe
-IE_DRIVER_PATH = C:/WSO2Telco_Automation/api-manager-test/src/test/resources/config/drivers/IEDriverServer.exe
-downloadPath = C:/WSO2Telco_Automation/api-manager-test/src/test/resources/config/download
-
+CHROME_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
+IE_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
+downloadPath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
