changes added to execute with IE

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -16,3 +16,4 @@ productionCallback= https://identity.demo.wso2telco.com/playground2/oauth2.jsp
 productionEndPoint = https://india.gateway.wso2telco.com/authorize/v1/spark/oauth2/authorize
 productionCarbonUsername = admin
 productionCarbonPassword = Y4ap9v4#
+WhiteListNumber =middleNumCon
