--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -4,6 +4,7 @@ IMPLICIT_WAIT=3000
 stagingApiManagerSiteName = http://apimanager.demo.wso2telco.com/store/
 stagingCarbonSiteName = http://identity.demo.wso2telco.com/carbon/admin/login.jsp
 stagingApiManagerPublisher = http://apimanager.demo.wso2telco.com/publisher/
+stagingApiManagerCarbon = http://apimanager.demo.wso2telco.com/carbon/
 
 stagingAdminUserName = admin
 stagingAdminPassword = admin
@@ -44,3 +45,4 @@ stagingSUBSCRIPTIONpwd = 1qaz2wsx@
 CHROME_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
 IE_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
 downloadPath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
+rateCardXML = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/rate-card.xml
