Added new Test Cases and Made some changes

--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -41,8 +41,11 @@ stagingSUBSCRIBERAPPpwd = 1qaz2wsx@
 #013 
 stagingSUBSCRIPTIONuser = AuxSubscriptionUser
 stagingSUBSCRIPTIONpwd = 1qaz2wsx@
+#115 
+stagingCUSTOMERCAREuser = AuxCustomerCareUser
+stagingCUSTOMERCAREpwd = 1qaz2wsx@
 
-CHROME_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
-IE_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
-downloadPath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
-rateCardXML = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/rate-card.xml
+CHROME_DRIVER_PATH = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
+IE_DRIVER_PATH = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
+downloadPath = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
+rateCardXML = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/rate-card.xml
