--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -11,9 +11,14 @@ stagingAdminPassword = admin
 stagingOperatorUserName = dialogadmin
 stagingOperatorPassword = admin
 
-mySqlUrl = jdbc:mysql://52.5.143.118:3306/qadbApiStats?autoReconnect=true&amp;relaxAutoCommit=true
-dbUsername = ApiStatsUser
-dbPassword = password123
+#demoSiteConnectionString
+#mySqlUrl = jdbc:mysql://52.5.143.118:3306/qadbApiStats?autoReconnect=true&amp;relaxAutoCommit=true
+#dbUsername = ApiStatsUser
+#dbPassword = password123
+#qa17SiteConnectionString
+mySqlUrl = jdbc:mysql://54.88.136.173:3306/qadbApiStats?autoReconnect=true&amp;relaxAutoCommit=true
+dbUsername = qauser
+dbPassword = ws02telc0
 
 sleepTime = 4000
 
@@ -45,7 +50,7 @@ stagingSUBSCRIPTIONpwd = 1qaz2wsx@
 stagingCUSTOMERCAREuser = AuxCustomerCareUser
 stagingCUSTOMERCAREpwd = 1qaz2wsx@
 
-CHROME_DRIVER_PATH = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
-IE_DRIVER_PATH = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
-downloadPath = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
-rateCardXML = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/rate-card.xml
+CHROME_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
+IE_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
+downloadPath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
+rateCardXML = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/rate-card.xml
