--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -6,10 +6,14 @@ stagingCarbonSiteName = http://identity.demo.wso2telco.com/carbon/admin/login.js
 stagingApiManagerPublisher = http://apimanager.demo.wso2telco.com/publisher/
 stagingApiManagerCarbon = http://apimanager.demo.wso2telco.com/carbon/
 
+qa17ApiManagerSiteName = https://apimanager.qa17.wso2telco.com/store/
+
 stagingAdminUserName = admin
 stagingAdminPassword = admin
 stagingOperatorUserName = dialogadmin
 stagingOperatorPassword = admin
+qa17AdminUserName = admin
+qa17AdminPassword = red7Top
 
 #demoSiteConnectionString
 #mySqlUrl = jdbc:mysql://52.5.143.118:3306/qadbApiStats?autoReconnect=true&amp;relaxAutoCommit=true
@@ -49,6 +53,9 @@ stagingSUBSCRIPTIONpwd = 1qaz2wsx@
 #115 
 stagingCUSTOMERCAREuser = AuxCustomerCareUser
 stagingCUSTOMERCAREpwd = 1qaz2wsx@
+#101
+qa17QA17LOGuser = AutInvSP1
+qa17QA17LOGpwd = 1qaz2wsx@
 
 CHROME_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
 IE_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
