changes to feature files and classes to rate card upload and monthly invoic TC

--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -6,7 +6,8 @@ stagingCarbonSiteName = http://identity.demo.wso2telco.com/carbon/admin/login.js
 stagingApiManagerPublisher = http://apimanager.demo.wso2telco.com/publisher/
 stagingApiManagerCarbon = http://apimanager.demo.wso2telco.com/carbon/
 
-qa17ApiManagerSiteName = https://apimanager.qa17.wso2telco.com/store/
+qa17ApiManagerSiteName = http://apimanager.qa17.wso2telco.com/store/
+qa17ApiManagerCarbon = http://apimanager.qa17.wso2telco.com/carbon/
 
 stagingAdminUserName = admin
 stagingAdminPassword = admin
@@ -21,6 +22,7 @@ qa17AdminPassword = red7Top
 #dbPassword = password123
 #qa17SiteConnectionString
 mySqlUrl = jdbc:mysql://54.88.136.173:3306/qadbApiStats?autoReconnect=true&amp;relaxAutoCommit=true
+#/qadbApiStats?autoReconnect=true&amp;relaxAutoCommit=true
 dbUsername = qauser
 dbPassword = ws02telc0
 
@@ -61,3 +63,4 @@ CHROME_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resource
 IE_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
 downloadPath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
 rateCardXML = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/rate-card.xml
+uploadRateCard = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/
