Steps added to activity manager page

--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -8,6 +8,7 @@ stagingApiManagerCarbon = http://apimanager.demo.wso2telco.com/carbon/
 
 qa17ApiManagerSiteName = http://apimanager.qa17.wso2telco.com/store/
 qa17ApiManagerCarbon = http://apimanager.qa17.wso2telco.com/carbon/
+qa17ActivityMonitor = http://monitor.qa17.wso2telco.com/carbon/
 
 stagingAdminUserName = admin
 stagingAdminPassword = admin
