--- a/src/test/resources/config/config.cfg
+++ b/src/test/resources/config/config.cfg
@@ -62,8 +62,9 @@ stagingCUSTOMERCAREpwd = 1qaz2wsx@
 qa17QA17LOGuser = AutInvSP1
 qa17QA17LOGpwd = 1qaz2wsx@
 
-CHROME_DRIVER_PATH = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
-IE_DRIVER_PATH = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
-downloadPath = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
-rateCardXML = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/rate-card.xml
-uploadRateCard = C:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/
+CHROME_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
+IE_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
+downloadPath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
+rateCardXML = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/rate-card.xml
+uploadRateCard = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/
+batFilePath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/DataScripts/
