--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -19,7 +19,7 @@ productionCarbonPassword = Y4ap9v4#
 WhiteListNumber =middleNumCon
 
 
-browser = FIREFOX
+browser = CHROME
 #FIREFOX, CHROME, INTERNETEXPLORER
 IMPLICIT_WAIT=3000
 stagingApiManagerSiteName = http://apimanager.demo.wso2telco.com/store/
@@ -83,8 +83,8 @@ stagingCUSTOMERCAREpwd = 1qaz2wsx@
 qa17QA17LOGuser = AutInvSP1
 qa17QA17LOGpwd = 1qaz2wsx@
 
-CHROME_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
-IE_DRIVER_PATH = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
+chrome.driver.path = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
+ie.driver.path = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
 downloadPath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
 rateCardXML = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/rate-card.xml
 uploadRateCard = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/
