changes made to hubdep 1.8 release

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -31,6 +31,14 @@ qa17ApiManagerSiteName = http://apimanager.qa17.wso2telco.com/store/
 qa17ApiManagerCarbon = http://apimanager.qa17.wso2telco.com/carbon/
 qa17ActivityMonitor = http://monitor.qa17.wso2telco.com/carbon/
 
+hubdepApiManagerSiteName = https://50.18.99.59:9443/store/
+hubdepApiManagerPublisher = https://50.18.99.59:9443/store/
+hubdepApiManagerCarbon = https://50.18.99.59:9443/carbon/
+hubdepCarbonSiteName = https://50.18.99.59:9443/carbon/
+
+hubdepAdminUserName = admin
+hubdepAdminPassword = admin
+
 stagingAdminUserName = admin
 stagingAdminPassword = admin
 stagingOperatorUserName = dialogadmin
@@ -55,6 +63,8 @@ sleepTime = 4000
 #001, 
 stagingSIGNUPuser = AuxTestSignupUser
 stagingSIGNUPpwd = 1qaz2wsx@
+hubdepSIGNUPuser = AuxTestSignupUser
+hubdepSIGNUPpwd = 1qaz2WSX@
 #002, 004
 stagingAGGRIGATORuser = AuxTestUser
 stagingAGGRIGATORpwd = 1qaz2wsx@
