changes done for 1.8 release

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -68,18 +68,28 @@ hubdepSIGNUPpwd = 1qaz2WSX@
 #002, 004
 stagingAGGRIGATORuser = AuxTestUser
 stagingAGGRIGATORpwd = 1qaz2wsx@
+hubdepAGGRIGATORuser = AuxTestUser
+hubdepAGGRIGATORpwd = 1qaz2WSX@
 #003
 stagingWITHOUTAGGRIGATORuser = AuxWithoutAggregate
 stagingWITHOUTAGGRIGATORpwd = 1qaz2wsx@
+hubdepWITHOUTAGGRIGATORuser = AuxWithoutAggregate
+hubdepWITHOUTAGGRIGATORpwd = 1qaz2WSX@
 #005, 011
 stagingLOGOUTuser = AuxLogoutUser
 stagingLOGOUTpwd = 1qaz2wsx@
+hubdepLOGOUTuser = AuxLogoutUser
+hubdepLOGOUTpwd = 1qaz2WSX@
 #006
 stagingPUBLISHERuser = AuxAPIUser
 stagingPUBLISHERpwd = 1qaz2wsx@
+hubdepPUBLISHERuser = AuxAPIUser
+hubdepPUBLISHERpwd = 1qaz2WSX@
 #010
 stagingAPPCREATEuser = AuxTestUser005
 stagingAPPCREATEpwd = 1qaz2wsx@
+hubdepAPPCREATEuser = AuxTestUser005
+hubdepAPPCREATEpwd = 1qaz2WSX@
 #014, 015
 stagingSUBSCRIBERAPPuser = AuxTestUser002
 stagingSUBSCRIBERAPPpwd = 1qaz2wsx@
