changes made to execute with 1.8

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -32,7 +32,7 @@ qa17ApiManagerCarbon = http://apimanager.qa17.wso2telco.com/carbon/
 qa17ActivityMonitor = http://monitor.qa17.wso2telco.com/carbon/
 
 hubdepApiManagerSiteName = https://50.18.99.59:9443/store/
-hubdepApiManagerPublisher = https://50.18.99.59:9443/store/
+hubdepApiManagerPublisher = https://50.18.99.59:9443/publisher/
 hubdepApiManagerCarbon = https://50.18.99.59:9443/carbon/
 hubdepCarbonSiteName = https://50.18.99.59:9443/carbon/
 
