--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -38,6 +38,8 @@ hubdepCarbonSiteName = https://50.18.99.59:9443/carbon/
 
 hubdepAdminUserName = admin
 hubdepAdminPassword = admin
+hubdepOperatorUserName = dialogadmin
+hubdepOperatorPassword = 1qaz2wsx@
 
 stagingAdminUserName = admin
 stagingAdminPassword = admin
@@ -85,6 +87,9 @@ stagingPUBLISHERuser = AuxAPIUser
 stagingPUBLISHERpwd = 1qaz2wsx@
 hubdepPUBLISHERuser = AuxAPIUser
 hubdepPUBLISHERpwd = 1qaz2WSX@
+#008
+hubdepAPPCREuser = AuxAPPCreateUser
+hubdepAPPCREpwd = 1qaz2WSX@
 #010
 stagingAPPCREATEuser = AuxTestUser005
 stagingAPPCREATEpwd = 1qaz2wsx@
@@ -102,6 +107,8 @@ stagingCUSTOMERCAREpwd = 1qaz2wsx@
 #101
 qa17QA17LOGuser = AutInvSP1
 qa17QA17LOGpwd = 1qaz2wsx@
+hubdepREPORTLOGuser = AutInvSP1
+hubdepREPORTLOGpwd = 1qaz2WSX@
 
 chrome.driver.path = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
 ie.driver.path = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
