changes made execute with 1.8

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -101,6 +101,8 @@ stagingSUBSCRIBERAPPpwd = 1qaz2wsx@
 #013 
 stagingSUBSCRIPTIONuser = AuxSubscriptionUser
 stagingSUBSCRIPTIONpwd = 1qaz2wsx@
+hubdepSUBSCRIPTIONuser = AuxSubscriptionUser
+hubdepSUBSCRIPTIONpwd = 1qaz2WSX@
 #115 
 stagingCUSTOMERCAREuser = AuxCustomerCareUser
 stagingCUSTOMERCAREpwd = 1qaz2wsx@
