--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -97,7 +97,9 @@ hubdepAPPCREATEuser = AuxTestUser005
 hubdepAPPCREATEpwd = 1qaz2WSX@
 #014, 015
 stagingSUBSCRIBERAPPuser = AuxTestUser002
-stagingSUBSCRIBERAPPpwd = 1qaz2wsx@
+stagingSUBSCRIBERAPPpwd = 1qaz2wsx@AuxTestUser002
+hubdepSUBSCRIBERAPPuser = AuxTestUser002
+hubdepSUBSCRIBERAPPpwd = 1qaz2WSX@
 #013 
 stagingSUBSCRIPTIONuser = AuxSubscriptionUser
 stagingSUBSCRIPTIONpwd = 1qaz2wsx@
