changes and workarounds

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -5,7 +5,7 @@ testSiteDomain = https://localhost:9444
 testSiteDomainhttp = http://localhost:9764
 #browser = FIREFOX
 ScreenshotPath = 
-Enviromnment = prod
+Enviromnment = hubdep
 adminUserName = admin
 adminPassword = admin
 default_implicitWait = 1000
@@ -19,7 +19,7 @@ productionCarbonPassword = Y4ap9v4#
 WhiteListNumber =middleNumCon
 
 
-browser = CHROME
+browser = FIREFOX
 #FIREFOX, CHROME, INTERNETEXPLORER
 IMPLICIT_WAIT=3000
 stagingApiManagerSiteName = http://apimanager.demo.wso2telco.com/store/
