--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -19,9 +19,10 @@ productionCarbonPassword = Y4ap9v4#
 WhiteListNumber =middleNumCon
 
 
-browser = FIREFOX
+browser = CHROME
 #FIREFOX, CHROME, INTERNETEXPLORER
 IMPLICIT_WAIT=3000
+Environment = hubdep
 stagingApiManagerSiteName = http://apimanager.demo.wso2telco.com/store/
 stagingCarbonSiteName = http://identity.demo.wso2telco.com/carbon/admin/login.jsp
 stagingApiManagerPublisher = http://apimanager.demo.wso2telco.com/publisher/
@@ -35,6 +36,7 @@ hubdepApiManagerSiteName = https://50.18.99.59:9443/store/
 hubdepApiManagerPublisher = https://50.18.99.59:9443/publisher/
 hubdepApiManagerCarbon = https://50.18.99.59:9443/carbon/
 hubdepCarbonSiteName = https://50.18.99.59:9443/carbon/
+hubdepActivityMonitor = https://50.18.99.59:9445/carbon
 
 hubdepAdminUserName = admin
 hubdepAdminPassword = admin
@@ -77,7 +79,7 @@ stagingWITHOUTAGGRIGATORuser = AuxWithoutAggregate
 stagingWITHOUTAGGRIGATORpwd = 1qaz2wsx@
 hubdepWITHOUTAGGRIGATORuser = AuxWithoutAggregate
 hubdepWITHOUTAGGRIGATORpwd = 1qaz2WSX@
-#005, 011, 037, 038, 041, 089, 091, 094, 095, 096, 097, 099, 100, 110
+#005, 011, 037, 038, 041, 087, 089, 091, 094, 095, 096, 097, 099, 100, 110
 stagingLOGOUTuser = AuxLogoutUser
 stagingLOGOUTpwd = 1qaz2wsx@
 hubdepLOGOUTuser = AuxLogoutUser
@@ -113,10 +115,10 @@ qa17QA17LOGuser = AutInvSP1
 qa17QA17LOGpwd = 1qaz2wsx@
 hubdepREPORTLOGuser = AutInvSP1
 hubdepREPORTLOGpwd = 1qaz2WSX@
-
-chrome.driver.path = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
-ie.driver.path = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
-downloadPath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
-rateCardXML = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/rate-card.xml
-uploadRateCard = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/
-batFilePath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/DataScripts/
+#D:/WSO2Telco_Automation_1.8/api-manager-tests
+chrome.driver.path = /src/test/resources/config/drivers/chromedriver.exe
+ie.driver.path = /src/test/resources/config/drivers/IEDriverServer.exe
+#downloadPath = D:/WSO2Telco_Automation_1.8/api-manager-tests/src/test/resources/config/download
+rateCardXML = /src/test/resources/config/data/rate-card.xml
+uploadRateCard = /src/test/resources/config/data/
+batFilePath = /src/test/resources/DataScripts/
