sandbox short code TC completed

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -19,7 +19,7 @@ productionCarbonPassword = Y4ap9v4#
 WhiteListNumber =middleNumCon
 
 
-browser = FIREFOX
+browser = CHROME
 #FIREFOX, CHROME, INTERNETEXPLORER
 IMPLICIT_WAIT=3000
 stagingApiManagerSiteName = http://apimanager.demo.wso2telco.com/store/
@@ -114,9 +114,14 @@ qa17QA17LOGpwd = 1qaz2wsx@
 hubdepREPORTLOGuser = AutInvSP1
 hubdepREPORTLOGpwd = 1qaz2WSX@
 
-chrome.driver.path = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
-ie.driver.path = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
-downloadPath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
-rateCardXML = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/rate-card.xml
-uploadRateCard = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/
-batFilePath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/DataScripts/
+hubdepSANDBOXNOuser=AuxSandBoxUser
+hubdepSANDBOXNOpwd=1qaz2WSX@
+
+hubdepSANDBOXNOCHANGEuser=AuxSandBoxUserNO
+hubdepSANDBOXNOCHANGEpwd=1qaz2WSX@
+chrome.driver.path = D:/WSO2Telco_Automtion_1.8/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
+ie.driver.path = D:/WSO2Telco_Automtion_1.8/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
+downloadPath = D:/WSO2Telco_Automtion_1.8/api-manager-tests/src/test/resources/config/download
+rateCardXML = D:/WSO2Telco_Automtion_1.8/api-manager-tests/src/test/resources/config/data/rate-card.xml
+uploadRateCard = D:/WSO2Telco_Automtion_1.8/api-manager-tests/src/test/resources/config/data/
+batFilePath = D:/WSO2Telco_Automtion_1.8/api-manager-tests/src/test/resources/DataScripts/
