adding ussd steps

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -115,9 +115,13 @@ qa17QA17LOGuser = AutInvSP1
 qa17QA17LOGpwd = 1qaz2wsx@
 hubdepREPORTLOGuser = AutInvSP1
 hubdepREPORTLOGpwd = 1qaz2WSX@
-#173
+#173,158
 hubdepSANDBOXNOuser=AuxSandBoxUser
 hubdepSANDBOXNOpwd=1qaz2WSX@
+#158
+hubdepSANDBOXUSSDuser=AuxSandBoxUssdUser
+hubdepSANDBOXUSSDpwd=1qaz2WSX@
+
 
 chrome.driver.path = /src/test/resources/config/drivers/chromedriver.exe
 ie.driver.path = /src/test/resources/config/drivers/IEDriverServer.exe
