inidan node data added

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -18,7 +18,7 @@ productionCarbonUsername = admin
 productionCarbonPassword = Y4ap9v4#
 WhiteListNumber =middleNumCon
 
-
+Environment = india
 browser = CHROME
 #FIREFOX, CHROME, INTERNETEXPLORER
 IMPLICIT_WAIT=3000
@@ -26,6 +26,11 @@ stagingApiManagerSiteName = http://apimanager.demo.wso2telco.com/store/
 stagingCarbonSiteName = http://identity.demo.wso2telco.com/carbon/admin/login.jsp
 stagingApiManagerPublisher = http://apimanager.demo.wso2telco.com/publisher/
 stagingApiManagerCarbon = http://apimanager.demo.wso2telco.com/carbon/
+
+indiaApiManagerSiteName = https://india.gateway.wso2telco.com/store/
+indiaCarbonSiteName = https://india.gateway.wso2telco.com/carbon/
+indiaApiManagerPublisher = https://india.gateway.wso2telco.com/publisher/
+indiaApiManagerCarbon = https://india.gateway.wso2telco.com/carbon/
 
 qa17ApiManagerSiteName = http://apimanager.qa17.wso2telco.com/store/
 qa17ApiManagerCarbon = http://apimanager.qa17.wso2telco.com/carbon/
@@ -39,6 +44,10 @@ qa17AdminUserName = admin
 qa17AdminPassword = red7Top
 qa17OperatorUserName = dialogadmin
 qa17OperatorPassword = red7Top
+indiaAdminUserName = admin
+indiaAdminPassword = Y4ap9v4#
+indiaOperatorUserName = dialogadmin
+indiaOperatorPassword = admin
 
 #demoSiteConnectionString
 #mySqlUrl = jdbc:mysql://52.5.143.118:3306/qadbApiStats?autoReconnect=true&amp;relaxAutoCommit=true
@@ -82,9 +91,12 @@ stagingCUSTOMERCAREpwd = 1qaz2wsx@
 #101
 qa17QA17LOGuser = AutInvSP1
 qa17QA17LOGpwd = 1qaz2wsx@
+#indiaNode
+indiaDATACREATEuser = DataCreateUser
+indiaDATACREATEpwd = 1qaz2wsx@
 
-chrome.driver.path = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/chromedriver.exe
-ie.driver.path = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/drivers/IEDriverServer.exe
+chrome.driver.path = /src/test/resources/config/drivers/chromedriver.exe
+ie.driver.path = /src/test/resources/config/drivers/IEDriverServer.exe
 downloadPath = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/download
 rateCardXML = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/rate-card.xml
 uploadRateCard = D:/WSO2Telco_Automation/api-manager-tests/src/test/resources/config/data/
