Updated with new locaters and steps

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -86,9 +86,9 @@ stagingLOGOUTpwd = 1qaz2wsx@
 hubdepLOGOUTuser = AuxLogoutUser
 hubdepLOGOUTpwd = 1qaz2WSX@
 #006
-stagingPUBLISHERuser = AuxAPIUser
+stagingPUBLISHERuser = AuxAPIPublisher
 stagingPUBLISHERpwd = 1qaz2wsx@
-hubdepPUBLISHERuser = AuxAPIUser
+hubdepPUBLISHERuser = AuxAPIPublisher
 hubdepPUBLISHERpwd = 1qaz2WSX@
 #008,010
 hubdepAPPCREuser = AuxAPPCreateUser
