Updated with new locaters and steps

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -39,9 +39,9 @@ hubdepCarbonSiteName = https://localhost:9443/carbon/
 hubdepActivityMonitor = https://localhost:9443/carbon
 hubdepApiManagerManage = https://localhost:9443/manage/
 
-hubdepAdminUserName = Administrator
-hubdepAdminPassword = 1qaz2wsx@
-hubdepOperatorUserName = dialogadmin
+hubdepAdminUserName = admin
+hubdepAdminPassword = admin
+hubdepOperatorUserName = Administrator
 hubdepOperatorPassword = 1qaz2wsx@
 
 stagingAdminUserName = Administrator
@@ -94,9 +94,9 @@ hubdepPUBLISHERpwd = 1qaz2WSX@
 hubdepAPPCREuser = AuxAPPCreateUser
 hubdepAPPCREpwd = 1qaz2WSX@
 #010
-stagingAPPCREATEuser = AuxTestUser005
+stagingAPPCREATEuser = AuxTestUser004
 stagingAPPCREATEpwd = 1qaz2wsx@
-hubdepAPPCREATEuser = AuxTestUser005
+hubdepAPPCREATEuser = AuxTestUser004
 hubdepAPPCREATEpwd = 1qaz2WSX@
 #014, 015
 stagingSUBSCRIBERAPPuser = AuxTestUser002
