Updated config file

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -32,17 +32,17 @@ qa17ApiManagerSiteName = http://apimanager.qa17.wso2telco.com/store/
 qa17ApiManagerCarbon = http://apimanager.qa17.wso2telco.com/carbon/
 qa17ActivityMonitor = http://monitor.qa17.wso2telco.com/carbon/
 
-hubdepApiManagerSiteName = https://localhost:9443/store/
-hubdepApiManagerPublisher = https://localhost:9443/publisher/
-hubdepApiManagerCarbon = https://localhost:9443/carbon/
-hubdepCarbonSiteName = https://localhost:9443/carbon/
-hubdepActivityMonitor = https://localhost:9443/carbon
-hubdepApiManagerManage = https://localhost:9443/manage/
+hubdepApiManagerSiteName = https://52.53.227.229:9447/store/
+hubdepApiManagerPublisher = https://52.53.227.229:9447/publisher/
+hubdepApiManagerCarbon = https://52.53.227.229:9447/carbon/
+hubdepCarbonSiteName = https://52.53.227.229:9447/carbon/
+hubdepActivityMonitor = https://52.53.227.229:9447/carbon
+hubdepApiManagerManage = https://52.53.227.229:9447/manage/
 
-hubdepAdminUserName = admin
-hubdepAdminPassword = admin
+hubdepAdminUserName = Administrator
+hubdepAdminPassword = pass#word2
 hubdepOperatorUserName = Administrator
-hubdepOperatorPassword = 1qaz2wsx@
+hubdepOperatorPassword = pass#word2
 
 stagingAdminUserName = Administrator
 stagingAdminPassword = 1qaz2wsx@
@@ -90,14 +90,23 @@ stagingPUBLISHERuser = AuxAPIPublisher
 stagingPUBLISHERpwd = 1qaz2wsx@
 hubdepPUBLISHERuser = AuxAPIPublisher
 hubdepPUBLISHERpwd = 1qaz2WSX@
+hubdepPUBLISHERuserTwo = AuxAPIPublisher02
+hubdepPUBLISHERpwdTwo = 1qaz2WSX@
+stagingPUBLISHERuserTwo = AuxAPIPublisher02
+stagingPUBLISHERpwdTwo = 1qaz2wsx@
+hubdepPUBLISHERuserThree = AuxAPIPublisher03
+hubdepPUBLISHERpwdThree = 1qaz2WSX@
+stagingPUBLISHERuserThree = AuxAPIPublisher03
+stagingPUBLISHERpwdThree = 1qaz2wsx@
+staging
 #008,010
 hubdepAPPCREuser = AuxAPPCreateUser
 hubdepAPPCREpwd = 1qaz2WSX@
 #010
-stagingAPPCREATEuser = AuxTestUser004
+stagingAPPCREATEuser = AuxTestSP
 stagingAPPCREATEpwd = 1qaz2wsx@
-hubdepAPPCREATEuser = AuxTestUser004
-hubdepAPPCREATEpwd = 1qaz2WSX@
+hubdepAPPCREATEuser = AuxTestSP
+hubdepAPPCREATEpwd =1qaz2WSX@
 #014, 015
 stagingSUBSCRIBERAPPuser = AuxTestUser002
 stagingSUBSCRIBERAPPpwd = 1qaz2wsx@AuxTestUser002
