Updated feature file

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -36,13 +36,13 @@ hubdepApiManagerSiteName = https://52.53.227.229:9447/store/
 hubdepApiManagerPublisher = https://52.53.227.229:9447/publisher/
 hubdepApiManagerCarbon = https://52.53.227.229:9447/carbon/
 hubdepCarbonSiteName = https://52.53.227.229:9447/carbon/
-hubdepActivityMonitor = https://52.53.227.229:9447/carbon
+hubdepActivityMonitor = https://52.53.227.229:9447/carbon/
 hubdepApiManagerManage = https://52.53.227.229:9447/manage/
 
 hubdepAdminUserName = Administrator
-hubdepAdminPassword = pass#word2
+hubdepAdminPassword = 1qaz2wsx@
 hubdepOperatorUserName = Administrator
-hubdepOperatorPassword = pass#word2
+hubdepOperatorPassword = 1qaz2wsx@
 
 stagingAdminUserName = Administrator
 stagingAdminPassword = 1qaz2wsx@
