--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -32,17 +32,17 @@ qa17ApiManagerSiteName = http://apimanager.qa17.wso2telco.com/store/
 qa17ApiManagerCarbon = http://apimanager.qa17.wso2telco.com/carbon/
 qa17ActivityMonitor = http://monitor.qa17.wso2telco.com/carbon/
 
-hubdepApiManagerSiteName = https://52.53.227.229:9447/store/
-hubdepApiManagerPublisher = https://52.53.227.229:9447/publisher/
-hubdepApiManagerCarbon = https://52.53.227.229:9447/carbon/
-hubdepCarbonSiteName = https://52.53.227.229:9447/carbon/
-hubdepActivityMonitor = https://52.53.227.229:9447/carbon/
-hubdepApiManagerManage = https://52.53.227.229:9447/manage/
+hubdepApiManagerSiteName = https://52.53.192.22:9448/store/
+hubdepApiManagerPublisher = https://52.53.192.22:9448/publisher/
+hubdepApiManagerCarbon = https://52.53.192.22:9448/carbon/
+hubdepCarbonSiteName = https://52.53.192.22:9448/carbon/
+hubdepActivityMonitor = https://52.53.192.22:9448/carbon/
+hubdepApiManagerManage = https://52.53.192.22:9448/manage/
 
 hubdepAdminUserName = Administrator
-hubdepAdminPassword = 1qaz2wsx@
+hubdepAdminPassword = pass#word2
 hubdepOperatorUserName = Administrator
-hubdepOperatorPassword = 1qaz2wsx@
+hubdepOperatorPassword = pass#word2
 
 stagingAdminUserName = Administrator
 stagingAdminPassword = 1qaz2wsx@
