Added new changes

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -18,7 +18,6 @@ productionCarbonUsername = admin
 productionCarbonPassword = Y4ap9v4#
 WhiteListNumber =middleNumCon
 
-
 browser = FIREFOX
 #FIREFOX, CHROME, INTERNETEXPLORER
 IMPLICIT_WAIT=3000
@@ -32,17 +31,21 @@ qa17ApiManagerSiteName = http://apimanager.qa17.wso2telco.com/store/
 qa17ApiManagerCarbon = http://apimanager.qa17.wso2telco.com/carbon/
 qa17ActivityMonitor = http://monitor.qa17.wso2telco.com/carbon/
 
-hubdepApiManagerSiteName = https://52.53.192.22:9448/store/
-hubdepApiManagerPublisher = https://52.53.192.22:9448/publisher/
-hubdepApiManagerCarbon = https://52.53.192.22:9448/carbon/
-hubdepCarbonSiteName = https://52.53.192.22:9448/carbon/
-hubdepActivityMonitor = https://52.53.192.22:9448/carbon/
-hubdepApiManagerManage = https://52.53.192.22:9448/manage/
+hubdepApiManagerSiteName = https://localhost:9443/store/
+hubdepApiManagerPublisher = https://localhost:9443/publisher/
+hubdepApiManagerCarbon = https://localhost:9443/carbon/
+hubdepCarbonSiteName = https://localhost:9443/carbon/
+hubdepActivityMonitor = https://localhost:9443/carbon/
+hubdepApiManagerManage = https://localhost:9443/manage/
 
 hubdepAdminUserName = Administrator
-hubdepAdminPassword = pass#word2
+hubdepAdminPassword = 1qaz2wsx@
 hubdepOperatorUserName = Administrator
-hubdepOperatorPassword = pass#word2
+hubdepOperatorPassword = 1qaz2wsx@
+
+AuXTestAPPC=AuXTestAPPM314
+AuXTestAPPE=AuXTestAPPM314
+
 
 stagingAdminUserName = Administrator
 stagingAdminPassword = 1qaz2wsx@
@@ -64,6 +67,11 @@ dbUsername = qauser
 dbPassword = ws02telc0
 
 sleepTime = 4000
+
+stagingOPADMINuser = AuxOperatorAdmin
+stagingOPADMINpwd = 1qaz2wsx@
+hubdepOPADMINuser = AuxOperatorAdmin
+hubdepOPADMINpwd = 1qaz2wsx@
 
 #001, 
 stagingSIGNUPuser = AuxTestSignupUser
@@ -90,14 +98,21 @@ stagingPUBLISHERuser = AuxAPIPublisher
 stagingPUBLISHERpwd = 1qaz2wsx@
 hubdepPUBLISHERuser = AuxAPIPublisher
 hubdepPUBLISHERpwd = 1qaz2WSX@
-hubdepPUBLISHERuserTwo = AuxAPIPublisher02
-hubdepPUBLISHERpwdTwo = 1qaz2WSX@
-stagingPUBLISHERuserTwo = AuxAPIPublisher02
-stagingPUBLISHERpwdTwo = 1qaz2wsx@
-hubdepPUBLISHERuserThree = AuxAPIPublisher03
-hubdepPUBLISHERpwdThree = 1qaz2WSX@
-stagingPUBLISHERuserThree = AuxAPIPublisher03
-stagingPUBLISHERpwdThree = 1qaz2wsx@
+hubdepPUBLISHERTWOuser = AuxAPIPublisher02
+hubdepPUBLISHERTWOpwd = 1qaz2WSX@
+stagingPUBLISHERTWOuser = AuxAPIPublisher02
+stagingPUBLISHERTWOpwd = 1qaz2wsx@
+hubdepPUBLISHERTHREEuser = AuxAPIPublisher03
+hubdepPUBLISHERTHREEpwd = 1qaz2WSX@
+stagingPUBLISHERTHREEuser = AuxAPIPublisher03
+stagingPUBLISHERTHREEpwd = 1qaz2wsx@
+
+
+stagingAPICREATEuser = AuxApiCreator
+stagingAPICREATEpwd = 1qaz2wsx@
+hubdepAPICREATEuser = AuxApiCreator
+hubdepAPICREATEpwd =1qaz2WSX@
+
 staging
 #008,010
 hubdepAPPCREuser = AuxAPPCreateUser
