Added changes to config file

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -31,21 +31,17 @@ qa17ApiManagerSiteName = http://apimanager.qa17.wso2telco.com/store/
 qa17ApiManagerCarbon = http://apimanager.qa17.wso2telco.com/carbon/
 qa17ActivityMonitor = http://monitor.qa17.wso2telco.com/carbon/
 
-hubdepApiManagerSiteName = https://localhost:9443/store/
-hubdepApiManagerPublisher = https://localhost:9443/publisher/
-hubdepApiManagerCarbon = https://localhost:9443/carbon/
-hubdepCarbonSiteName = https://localhost:9443/carbon/
-hubdepActivityMonitor = https://localhost:9443/carbon/
-hubdepApiManagerManage = https://localhost:9443/manage/
+hubdepApiManagerSiteName = https://52.53.192.22:9448/store/
+hubdepApiManagerPublisher = https://52.53.192.22:9448/publisher/
+hubdepApiManagerCarbon = https://52.53.192.22:9448/carbon/
+hubdepCarbonSiteName = https://52.53.192.22:9448/carbon/
+hubdepActivityMonitor = https://52.53.192.22:9448/carbon/
+hubdepApiManagerManage = https://52.53.192.22:9448/manage/
 
 hubdepAdminUserName = Administrator
 hubdepAdminPassword = 1qaz2wsx@
 hubdepOperatorUserName = Administrator
 hubdepOperatorPassword = 1qaz2wsx@
-
-AuXTestAPPC=AuXTestAPPM314
-AuXTestAPPE=AuXTestAPPM314
-
 
 stagingAdminUserName = Administrator
 stagingAdminPassword = 1qaz2wsx@
