--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -5,7 +5,8 @@ testSiteDomain = https://localhost:9444
 testSiteDomainhttp = http://localhost:9764
 #browser = FIREFOX
 ScreenshotPath = 
-Enviromnment = hubdep
+Enviromnment =hub206env 
+#hubdep
 adminUserName = admin
 adminPassword = admin
 
@@ -22,7 +23,8 @@ WhiteListNumber =middleNumCon
 browser = FIREFOX
 #FIREFOX, CHROME, INTERNETEXPLORER
 IMPLICIT_WAIT=3000
-Environment = hubdep
+Environment = hub206env
+#hubdep
 stagingApiManagerSiteName = http://apimanager.demo.wso2telco.com/store/
 stagingCarbonSiteName = http://identity.demo.wso2telco.com/carbon/admin/login.jsp
 stagingApiManagerPublisher = http://apimanager.demo.wso2telco.com/publisher/
@@ -32,16 +34,31 @@ qa17ApiManagerSiteName = http://apimanager.qa17.wso2telco.com/store/
 qa17ApiManagerCarbon = http://apimanager.qa17.wso2telco.com/carbon/
 qa17ActivityMonitor = http://monitor.qa17.wso2telco.com/carbon/
 
-hubdepApiManagerSiteName = https://52.53.227.229:9447/store/
-hubdepApiManagerPublisher = https://52.53.227.229:9447/publisher/
-hubdepApiManagerCarbon = https://52.53.227.229:9447/carbon/
-hubdepCarbonSiteName = https://52.53.227.229:9446/carbon/
-hubdepActivityMonitor = https://52.53.227.229:9447/carbon/
-hubdepApiManagerManage = https://52.53.227.229:9447/manage/
+hub206envApiManagerSiteName = https://52.14.145.206:9443/store/
+hub206envApiManagerPublisher = https://52.14.145.206:9443/publisher/
+hub206envApiManagerCarbon = https://52.14.145.206:9443/carbon/
+hub206envCarbonSiteName = https://54.193.80.220:9445/carbon/
+hub206envActivityMonitor = https://54.193.80.220:9443/carbon/
+hub206envApiManagerManage = https://54.193.80.220:9443/manage/
+
+
+hubdepApiManagerSiteName = https://52.14.145.206:9447/store/
+hubdepApiManagerPublisher = https://52.14.145.206:9443/publisher/
+hubdepApiManagerCarbon = https://52.14.145.206:9447/carbon/
+hubdepCarbonSiteName = https://54.193.80.220:9446/carbon/
+hubdepActivityMonitor = https://54.193.80.220:9443/carbon/
+hubdepApiManagerManage = https://54.193.80.220:9443/manage/
+
+#indentiy server credentials
+hub206envAdminUserName = admin
+hub206envAdminPassword = admin
 
 #indentiy server credentials
 hubdepAdminUserName = admin
 hubdepAdminPassword = admin
+
+hub206envOperatorUserName = admin
+hub206envOperatorPassword = admin
 
 hubdepOperatorUserName = admin
 hubdepOperatorPassword = admin
@@ -74,7 +91,10 @@ stagingOPADMINpwd = 1qaz2wsx@
 hubdepOPADMINuser = AuxOperatorAdmin
 hubdepOPADMINpwd = 1qaz2wsx@
 
-#001, 
+hub206envOPADMINuser = AuxOperatorAdmin
+hub206envOPADMINpwd = 1qaz2wsx@
+
+#001,
 stagingSIGNUPuser = AuxTestSignupUser
 stagingSIGNUPpwd = 1qaz2wsx@
 hubdepSIGNUPuser = AuxTestSignupUser
@@ -97,8 +117,14 @@ hubdepLOGOUTpwd = 1qaz2WSX@
 #006
 stagingPUBLISHERuser = AuxAPIPublisher
 stagingPUBLISHERpwd = 1qaz2wsx@
+
+hub206envPUBLISHERuser = admin
+hub206envPUBLISHERpwd = admin
+hub206envPUBLISHERTWOuser = AuxAPIPublisher02
+hub206envPUBLISHERTWOpwd = 1qaz2WSX@
+
 hubdepPUBLISHERuser = admin
-hubdepPUBLISHERpwd = 1qaz2WSX@
+hubdepPUBLISHERpwd = admin
 hubdepPUBLISHERTWOuser = AuxAPIPublisher02
 hubdepPUBLISHERTWOpwd = 1qaz2WSX@
 stagingPUBLISHERTWOuser = AuxAPIPublisher02
@@ -108,12 +134,20 @@ hubdepPUBLISHERTHREEpwd = 1qaz2WSX@
 stagingPUBLISHERTHREEuser = AuxAPIPublisher03
 stagingPUBLISHERTHREEpwd = 1qaz2wsx@
 
-hubdepOPERATOR1ADMINuser=OPERATOR1
+hub206envOPERATOR1ADMINuser=dialogadmin
+hub206envOPERATOR1ADMINpwd=1qaz2WSX@
+hub206envOPERATOR2ADMINuser=celcomadmin
+hub206envOPERATOR2ADMINpwd=1qaz2WSX@
+
+hubdepOPERATOR1ADMINuser=dialogadmin
 hubdepOPERATOR1ADMINpwd=1qaz2WSX@
-hubdepOPERATOR2ADMINuser=OPERATOR2
+hubdepOPERATOR2ADMINuser=celcomadmin
 hubdepOPERATOR2ADMINpwd=1qaz2WSX@
 
-hubdepSPuser = hubsp2
+hub206envSPuser = hubsp
+hub206envSPpwd = 1qaz2WSX@
+
+hubdepSPuser = hubsp
 hubdepSPpwd = 1qaz2WSX@
 
 TestAPP222614=TestAPP222614
