--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -24,6 +24,7 @@ browser = FIREFOX
 #FIREFOX, CHROME, INTERNETEXPLORER
 IMPLICIT_WAIT=3000
 Environment = hub206env
+#hub220env
 #hubdep
 stagingApiManagerSiteName = http://apimanager.demo.wso2telco.com/store/
 stagingCarbonSiteName = http://identity.demo.wso2telco.com/carbon/admin/login.jsp
@@ -41,6 +42,13 @@ hub206envCarbonSiteName = https://52.14.145.206:9445/carbon/
 hub206envActivityMonitor = https://54.193.80.220:9443/carbon/
 hub206envApiManagerManage = https://54.193.80.220:9443/manage/
 
+hub220envApiManagerSiteName = https://52.14.145.220:9447/store/
+hub220envApiManagerPublisher = https://52.14.145.220:9447/publisher/
+hub220envApiManagerCarbon = https://52.14.145.220:9447/carbon/
+hub220envCarbonSiteName = https://52.14.145.220:9445/carbon/
+hub220envActivityMonitor = https://54.193.80.220:9443/carbon/
+hub220envApiManagerManage = https://54.193.80.220:9447/manage/
+
 
 hubdepApiManagerSiteName = https://52.14.145.206:9447/store/
 hubdepApiManagerPublisher = https://52.14.145.206:9443/publisher/
@@ -50,12 +58,19 @@ hubdepActivityMonitor = https://54.193.80.220:9443/carbon/
 hubdepApiManagerManage = https://54.193.80.220:9443/manage/
 
 #indentiy server credentials
+hub220envAdminUserName = admin
+hub220envAdminPassword = admin
+
+#indentiy server credentials
 hub206envAdminUserName = admin
 hub206envAdminPassword = admin
 
 #indentiy server credentials
 hubdepAdminUserName = admin
 hubdepAdminPassword = admin
+
+hub220envOperatorUserName = admin
+hub220envOperatorPassword = admin
 
 hub206envOperatorUserName = admin
 hub206envOperatorPassword = admin
@@ -94,6 +109,9 @@ hubdepOPADMINpwd = 1qaz2wsx@
 hub206envOPADMINuser = AuxOperatorAdmin
 hub206envOPADMINpwd = 1qaz2wsx@
 
+hub220envOPADMINuser = AuxOperatorAdmin
+hub220envOPADMINpwd = 1qaz2wsx@
+
 #001,
 stagingSIGNUPuser = AuxTestSignupUser
 stagingSIGNUPpwd = 1qaz2wsx@
@@ -123,6 +141,11 @@ hub206envPUBLISHERpwd = admin
 hub206envPUBLISHERTWOuser = AuxAPIPublisher02
 hub206envPUBLISHERTWOpwd = 1qaz2WSX@
 
+hub220envPUBLISHERuser = admin
+hub220envPUBLISHERpwd = admin
+hub220envPUBLISHERTWOuser = AuxAPIPublisher02
+hub220envPUBLISHERTWOpwd = 1qaz2WSX@
+
 hubdepPUBLISHERuser = admin
 hubdepPUBLISHERpwd = admin
 hubdepPUBLISHERTWOuser = AuxAPIPublisher02
@@ -139,6 +162,11 @@ hub206envOPERATOR1ADMINpwd=1qaz2WSX@
 hub206envOPERATOR2ADMINuser=celcomadmin
 hub206envOPERATOR2ADMINpwd=1qaz2WSX@
 
+hub220envOPERATOR1ADMINuser=dialogadmin
+hub220envOPERATOR1ADMINpwd=1qaz2WSX@
+hub220envOPERATOR2ADMINuser=celcomadmin
+hub220envOPERATOR2ADMINpwd=1qaz2WSX@
+
 hubdepOPERATOR1ADMINuser=dialogadmin
 hubdepOPERATOR1ADMINpwd=1qaz2WSX@
 hubdepOPERATOR2ADMINuser=celcomadmin
@@ -146,6 +174,9 @@ hubdepOPERATOR2ADMINpwd=1qaz2WSX@
 
 hub206envSPuser = hubsp
 hub206envSPpwd = 1qaz2WSX@
+
+hub220envSPuser = hubsp
+hub220envSPpwd = 1qaz2WSX@
 
 hubdepSPuser = hubsp
 hubdepSPpwd = 1qaz2WSX@
@@ -201,6 +232,12 @@ hub206envActivitiExplorerPath= /home/ksrajith/Downloads/
 hub206envActExpUserName=kermit
 hub206envActExpPassword=kermit
 hub206envbarFileLocation=/home/ksrajith/Downloads/carbonIS/
+
+hub220envActivitiExplorerUrl=https://52.14.145.220:9447/activiti-explorer/
+hub220envActivitiExplorerPath= /home/ksrajith/Downloads/
+hub220envActExpUserName=kermit
+hub220envActExpPassword=kermit
+hub220envbarFileLocation=/home/ksrajith/Downloads/carbonIS/
 
 chrome.driver.path = /src/test/resources/config/drivers/chromedriver.exe
 ie.driver.path = /src/test/resources/config/drivers/IEDriverServer.exe
