Add new test case to automate publisher creation and assign publisher roles

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -159,18 +159,58 @@ stagingPUBLISHERTHREEpwd = 1qaz2wsx@
 
 hub206envOPERATOR1ADMINuser=operator1
 hub206envOPERATOR1ADMINpwd=1qaz2WSX@
+hub206envOPERATOR1ROLE=operator1-admin-role
 hub206envOPERATOR2ADMINuser=operator2
 hub206envOPERATOR2ADMINpwd=1qaz2WSX@
+hub206envOPERATOR2ROLE=operator2-admin-role
+
+hub206envPUBLISHER1ADMINuser=publisher1
+hub206envPUBLISHER1ADMINpwd=1qaz2WSX@
+hub206envPUBLISHER1ROLE=hub-unitA-publisher
+hub206envPUBLISHER2ADMINuser=publisher2
+hub206envPUBLISHER2ADMINpwd=1qaz2WSX@
+hub206envPUBLISHER2ROLE=hub-unitB-publisher
+hub206envPUBLISHER3ADMINuser=publisher3
+hub206envPUBLISHER3ADMINpwd=1qaz2WSX@
+hub206envPUBLISHER3ROLE=hub-unitC-publisher
+
 
 hub220envOPERATOR1ADMINuser=operator1
 hub220envOPERATOR1ADMINpwd=1qaz2WSX@
+hub220envOPERATOR1ROLE=operator1-admin-role
 hub220envOPERATOR2ADMINuser=operator2
 hub220envOPERATOR2ADMINpwd=1qaz2WSX@
+hub220envOPERATOR2ROLE=operator2-admin-role
+
+hub220envPUBLISHER1ADMINuser=publisher1
+hub220envPUBLISHER1ADMINpwd=1qaz2WSX@
+hub220envPUBLISHER1ROLE=hub-unitA-publisher
+hub220envPUBLISHER2ADMINuser=publisher2
+hub220envPUBLISHER2ADMINpwd=1qaz2WSX@
+hub220envPUBLISHER2ROLE=hub-unitB-publisher
+hub220envPUBLISHER3ADMINuser=publisher3
+hub220envPUBLISHER3ADMINpwd=1qaz2WSX@
+hub220envPUBLISHER3ROLE=hub-unitC-publisher
+
 
 hubdepOPERATOR1ADMINuser=operator1
 hubdepOPERATOR1ADMINpwd=1qaz2WSX@
+hubdepOPERATOR1ROLE=operator1-admin-role
 hubdepOPERATOR2ADMINuser=operator2
 hubdepOPERATOR2ADMINpwd=1qaz2WSX@
+hubdepOPERATOR2ROLE=operator2-admin-role
+
+hubdepPUBLISHER1ADMINuser=publisher1
+hubdepPUBLISHER1ADMINpwd=1qaz2WSX@
+hubdepPUBLISHER1ROLE=hub-unitA-publisher
+hubdepPUBLISHER2ADMINuser=publisher2
+hubdepPUBLISHER2ADMINpwd=1qaz2WSX@
+hubdepPUBLISHER2ROLE=hub-unitB-publisher
+hubdepPUBLISHER3ADMINuser=publisher3
+hubdepPUBLISHER3ADMINpwd=1qaz2WSX@
+hubdepPUBLISHER3ROLE=hub-unitC-publisher
+
+
 
 hub206envSPuser = hubsp
 hub206envSPpwd = 1qaz2WSX@
