--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.wso2telco.apimanager.tests</groupId>
-  <artifactId>intgw-test</artifactId>
+  <artifactId>api-manager-tests</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>intgw-test</name>
+  <name>api-manager-tests</name>
   <url>http://maven.apache.org</url>
    <properties>
 		<timestamp>${maven.build.timestamp}</timestamp>
